# scroll-phat-hd-rs

./: .travis.yml  Cargo.toml  README.md  deploy  search-index.js  update_doc
examples/: alphabet.rs  counter.rs  simple.rs
implementors/scroll_phat_hd/display/: trait.Display.js
scroll_phat_hd/: index.html  sidebar-items.js
scroll_phat_hd/display/: UnicodeDisplay.t.html  index.html  sidebar-items.js  struct.I2CDisplay.html  struct.TermDisplay.html  struct.UnicodeDisplay.html  trait.Display.html
scroll_phat_hd/display/i2c_display/: I2CDisplay.t.html  struct.I2CDisplay.html
scroll_phat_hd/display/term_display/: TermDisplay.t.html  struct.TermDisplay.html
scroll_phat_hd/display/unicode_display/: struct.UnicodeDisplay.html
scroll_phat_hd/scroller/: index.html  sidebar-items.js  struct.Scroller.html
src/: display.rs  font.rs  lib.rs  main.rs  projector.rs  scroller.rs  shared.rs  types.rs
src/display/: i2c_display.rs  mod.rs  term_display.rs  unicode_display.rs
src/scroll_phat_hd/: display.rs.html  font.rs.html  lib.rs.html  scroller.rs.html  shared.rs.html
src/scroll_phat_hd/display/: i2c_display.rs.html  mod.rs.html  term_display.rs.html  unicode_display.rs.html
