[package]
name = "scroll_phat_hd"
version = "0.2.1"
authors = ["Tiziano Santoro <tiziano88@gmail.com>"]
documentation = "https://tiziano88.github.io/scroll-phat-hd-rs/scroll_phat_hd/index.html"
description = """
Scroll Phat HD library
"""
license = "MIT"

[dependencies]
termion = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
i2cdev = "0.3"
